Add localhost toggle

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <main class="wrapper">
       <section id='people' class="container">
         <h1>PFR Reference API Test</h1>
+        <input type="checkbox" id="uselocalhost" name="uselocalhost" >
+        <label style="display:inline" for="uselocalhost">Use Localhost API server</label>
+        
         <h2>Person Picker</h2>
         
         <input type="search" id="nameSearch" name="nameSearch" autofocus required
