--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- allow the http call to the api -->
-    <meta http-equiv="Content-Security-Policy: default-src 'self' *.pfr.co.nz http:/*>
+    <meta http-equiv="Content-Security-Policy: default-src 'self' *.plantandfood.co.nz http:/*" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.0/milligram.css">
@@ -47,7 +47,7 @@
         <ul class='tight' id="projectResults"></ul>
     </section>
 
-    <section id="Help" class="container">
+    <!-- <section id="Help" class="container">
       <h3>Enable Mixed Content</h3>
       <p>This page is hosted on github using https. The PFR Reference API is on uat test under http. 
         This means that the page will try to load content from an insecure source and this is blocked by default.
@@ -57,7 +57,7 @@
           <li>Click the lock or caution icon, then click Site settings.</li>
           <li>Scroll to Insecure content, then use the drop-down list to change Block (default) to Allow.</li>
         </ul>
-      </p>
-    </section>
+      
+    </section> -->
   </main>
 </html>
